# ML---Predict-bank-loan---LGBM

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci-cd.yml
api/: app.py  config.py  database.py  predict.py
artifacts/: inference_benchmark.json  model.onnx
docs/: fiche_pedagogique.md  inference_optimization_onnx.md
fluentd/: Dockerfile  fluent.conf
grafana/dashboards/: mlops-monitoring.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: neon.yml
monitoring/: dashboard.py
notebooks/: 04_data_drift_analysis.ipynb  05_production_drift_monitoring.ipynb  06_inference_optimization.ipynb
scripts/: init_db.py  init_db.sql  run_drift_detection.py  simulate_production_traffic.py
